# libopustags

./: CHANGELOG  Makefile  Makefile.am  README.md  autogen.sh  config.h.in  configure.ac  opustags-lt  opustags.pc.in  package_version
doc/: AUTHORS  CHANGELOG  opuspic2tag.1  opustags.1  opustags.pc_sample
src/: clipic.c  clitags.c  config.h  opustags.c  opustags.h  picture.c  picture.h  tool.c
